# MinecraftCpp-OpenGL

./: CMakeLists.txt  README.md  run.sh
MinecraftC++/Headers/: camera.hpp  cubeLoader.hpp  cubeRenderer.hpp  cuboBase.hpp  input.hpp  noise.hpp  player.hpp  shaderClass.hpp  shaderProgram.hpp  terrainRenderer.hpp
MinecraftC++/Shaders/: cubeFragmentShader.txt  cubeVertexShader.txt
MinecraftC++/Sources/: camera.cpp  cubeLoader.cpp  cubeRenderer.cpp  cuboBase.cpp  input.cpp  main.cpp  noise.cpp  player.cpp  shaderClass.cpp  shaderProgram.cpp  terrainRenderer.cpp
